src/snapshots/droid_tui__ui__tests__render_outlier_status_hint_snapshot_matrix@render_outlier_mono_80.snap
---
source: src/ui.rs
expression: channel
---
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 228 │
└──────────────────────────────────────────────────────────────────────────────┘
