src/snapshots/droid_tui__ui__tests__render_outlier_status_hint_snapshot_matrix@render_outlier_terminal_120.snap
---
source: src/ui.rs
expression: channel
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded arpeggio1 | Renders degraded at 120 cols — use ≥ 228 cols or reduce scale | Scale: 1.0 | Orientation: Portrait │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
