src/snapshots/droid_tui__ui__tests__render_outlier_status_hint_snapshot_matrix@render_outlier_terminal_80.snap
---
source: src/ui.rs
expression: channel
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Loaded arpeggio1 | Renders degraded at 80 cols — use ≥ 228 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────┘
